# Winux

./: Cargo.toml  LICENSE  README  README.md
src/: main.rs
src/core/: config.rs  keybinds.rs  mod.rs  wm.rs
src/system/: mod.rs  process.rs  window.rs
src/ui/: bar.rs  launcher.rs  mod.rs  workspace.rs
src/utils/: input.rs  mod.rs  paths.rs  winapi_helpers.rs
